# OWL

./: .gitmodules  3rdParty.txt  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/action-scripts/: install-cuda-windows.ps1
.github/workflows/: Ubuntu.yml  Windows.yml
include/owl/: owl.h  owl_device.h  owl_host.h
include/owl/common/: owl-common.h
owl/: APIContext.cpp  APIContext.h  APIHandle.cpp  APIHandle.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CUDADriver.cpp  CUDADriver.h  Context.cpp  Context.h  CurvesGeom.cu  CurvesGeom.h  CurvesGeomGroup.cpp  CurvesGeomGroup.h  DeviceContext.cpp  DeviceContext.h  DeviceMemory.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  InstanceGroup.cu  InstanceGroup.h  LaunchParams.cpp  LaunchParams.h  MissProg.cpp  MissProg.h  Module.cpp  Module.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  RayGen.cpp  RayGen.h  RegisteredObject.cpp  RegisteredObject.h  SBTObject.cpp  SBTObject.h  (+19 more)
owl/cmake/: FindTBB.cmake  configure_tbb.cmake  embed_optixir.cmake  embed_ptx.cmake  owlConfig.cmake.in
owl/helper/: cuda.h  optix.h
owl/include/owl/: owl_device_buffer.h  owl_host.h  pyOWL.h
prime/: CMakeLists.txt
prime/include/owl/: owl_prime.h
prime/owl-prime/: CMakeLists.txt  Context.cu  Context.h  Group.cpp  Group.h  Model.cpp  Model.h  Spheres.cpp  Spheres.h  Triangles.cpp  Triangles.h  deviceCode.cu  deviceCode.h
prime/primer-common/: Context.h  Geom.h  Group.h  Model.h  Object.h  Ray.h  StridedArray.h  emptyFile.cpp  primer.cpp
samples/: CMakeLists.txt
samples/advanced/: CMakeLists.txt
samples/advanced/optix7course/: CMakeLists.txt  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp  tiny_obj_loader.h
samples/cmdline/: CMakeLists.txt
samples/cmdline/s00-rayGenOnly/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/cmdline/s01-simpleTriangles/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
samples/cmdline/s05-rtow/: CMakeLists.txt  GeomTypes.h  Materials.h  deviceCode.cu  hostCode.cpp
samples/cmdline/s06-rtow-mixedGeometries/: CMakeLists.txt  GeomTypes.h  deviceCode.cu  hostCode.cpp
samples/cmdline/s07-rtow-multiGPU/: CMakeLists.txt  GeomTypes.h  deviceCode.cu  hostCode.cpp
samples/cmdline/s08-sierpinski/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/cmdline/s09-motionBlurSimpleTriangles/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/cmdline/s10-launch3D/: CMakeLists.txt  GeomTypes.h  Materials.h  deviceCode.cu  deviceCode.h  hostCode.cu
samples/cmdline/s11-textures/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/common/: CMakeLists.txt
samples/common/owlViewer/: CMakeLists.txt  Camera.cpp  Camera.h  FlyMode.cpp  FlyMode.h  InspectMode.cpp  InspectMode.h  OWLViewer.cpp  OWLViewer.h  cuda_helper.h  glew_lite.h
samples/interactive/: CMakeLists.txt
samples/interactive/int01-simpleTriangles/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int06-mixedGeometries/: CMakeLists.txt  GeomTypes.h  deviceCode.cu  hostCode.cpp
samples/interactive/int07-whitted/: CMakeLists.txt  GeomTypes.h  deviceCode.cu  hostCode.cpp
samples/interactive/int10-texturedTriangles/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int11-rotatingBoxes/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
samples/interactive/int12-switchingTextureSets/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int13-motionBlurInstances/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int14-motionBlurAabbs/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int15-cookBilliardScene/: CMakeLists.txt  deviceCode.cu  deviceCode.h  helpers.h  hostCode.cpp
samples/interactive/int16-curves/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int17-curveMaterials/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int18-spherePrimitives/: deviceCode.cu  deviceCode.h  hostCode.cpp
samples/interactive/int19-instancePrograms/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp
samples/prime/: CMakeLists.txt
samples/prime/instances/: CMakeLists.txt  instances.cu
samples/prime/rtow-prime-cuda/: CMakeLists.txt  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Materials.h  World.cpp  World.h  rtow-render-cuda.cu
samples/prime/rtow-prime-host/: CMakeLists.txt  rtow-render-host.cpp
