# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# ---------------------------------------------------------------------------
# a more serious kind of example with model loader, viewer, simple
# path tracer, etc
# ---------------------------------------------------------------------------
add_subdirectory(optix7course)


